--- a/_site.yml
+++ b/_site.yml
@@ -7,5 +7,8 @@ navbar:
   right:
     - text: "About"
       href: index.html
+    - text: "project"
+      href: project.html
+    
     
 output: distill::distill_article
