--- a/_site.yml
+++ b/_site.yml
@@ -7,8 +7,10 @@ navbar:
   right:
     - text: "About"
       href: index.html
-    - text: "project"
+    - text: "Project"
       href: project.html
+    - text: "STA 631"
+      href: STA631.html
     
     
 output: distill::distill_article
